--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="./script.js" defer></script>
     <!-- CSS -->
     <link rel="stylesheet" href="./styles/style.css" />
-    <title>Kristall osh tuzi</title>
+    <title>KRISTALL OSH TUZI</title>
   </head>
   <body>
     <!-- Home -->
@@ -32,7 +32,7 @@
 
         <div class="mid">
           <div class="circle">
-            <img src="./img/katalog.png" alt="katalog">
+            <img src="./img/katalog.png" alt="katalog" />
           </div>
         </div>
 
@@ -49,6 +49,12 @@
     <!-- Kompaniya haqida -->
     <div class="company" id="company">
       <h1 class="title">Kompaniya haqida</h1>
+      <p class="subtitle">
+        Bugungi kunda "KRISTALL OSH TUZI" - bu xalq tomonidan tan olingan eng
+        sifatli tuz. "KRISTALL OSH TUZI" butun O'zbekiston Respublikasi bo'ylab
+        yetkazib beriladi. Davlat standartlariga mos keladi. Hozirda
+        kompaniyamiz turli navlarni ishlab chiqarmoqda.
+      </p>
     </div>
   </body>
 </html>
