--- a/index.html
+++ b/index.html
@@ -170,9 +170,21 @@
         <div class="box5">5</div>
       </div>
     </div>
+
+    <!-- About -->
+    <div class="about">
+      <div class="about1">
+        <h1 class="title">25+</h1>
+        <p class="subtitle">yildan ortiq O`zbekistonda yetakchi</p>
+      </div>
+      <div class="about2">
+        <h1 class="title">500K+</h1>
+        <p class="subtitle">dan ortiq do`konlar bilan ishlash</p>
+      </div>
+    </div>
+
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/CSSRulePlugin3.min.js"></script>
-
     <script src="script.js"></script>
   </body>
 </html>
