--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
       <div class="hero">
         <div class="left">
-          <h1 class="title">KRISTALL TUZ - ВЫСШИЙ СОРТ</h1>
-          <p class="subtitle">
+          <h2 class="title">KRISTALL TUZ - ВЫСШИЙ СОРТ</h2>
+          <article class="subtitle">
             Ovqatlanadigan yodlangan tuz deyarli har qanday taomga ajoyib
             qo'shimcha hisoblanadi
-          </p>
+          </article>
         </div>
 
         <div class="mid">
@@ -48,13 +48,13 @@
 
     <!-- Kompaniya haqida -->
     <div class="company" id="company">
-      <h1 class="title">Kompaniya haqida</h1>
-      <p class="subtitle">
+      <h2 class="title">Kompaniya haqida</h2>
+      <span class="subtitle">
         Bugungi kunda "KRISTALL OSH TUZI" - bu xalq tomonidan tan olingan eng
         sifatli tuz. "KRISTALL OSH TUZI" butun O'zbekiston Respublikasi bo'ylab
         yetkazib beriladi. Davlat standartlariga mos keladi. Hozirda
         kompaniyamiz turli navlarni ishlab chiqarmoqda.
-      </p>
+      </span>
     </div>
 
     <!-- SLIDER -->
@@ -69,7 +69,7 @@
               lacinia dui lectus. Donec scelerisque ipsum diam, ac mattis orci
               pellentesque eget.
             </p>
-            <button>Check Now</button>
+            <!-- <button>Check Now</button> -->
           </div>
 
           <div class="illustration"><div class="inner"></div></div>
@@ -174,12 +174,12 @@
     <!-- About -->
     <div class="about">
       <div class="about1">
-        <h1 class="title">25+</h1>
-        <p class="subtitle">yildan ortiq O`zbekistonda yetakchi</p>
+        <h2 class="title">25+</h2>
+        <span class="subtitle">yildan ortiq O`zbekistonda yetakchi</span>
       </div>
       <div class="about2">
-        <h1 class="title">500K+</h1>
-        <p class="subtitle">dan ortiq do`konlar bilan ishlash</p>
+        <h2 class="title">500K+</h2>
+        <span class="subtitle">dan ortiq do`konlar bilan ishlash</span>
       </div>
     </div>
 
