--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- JS -->
-    <script src="./script.js" defer></script>
     <!-- CSS -->
     <link rel="stylesheet" href="./styles/style.css" />
+    <script
+      src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"
+      defer
+    ></script>
+    <script
+      src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/CSSRulePlugin3.min.js"
+      defer
+    ></script>
+    <script src="script.js" defer></script>
     <title>KRISTALL OSH TUZI</title>
   </head>
   <body>
@@ -183,8 +190,37 @@
       </div>
     </div>
 
-    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
-    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/CSSRulePlugin3.min.js"></script>
-    <script src="script.js"></script>
+    <!-- Reklama -->
+    <div class="reklama">
+      <div class="head">
+        <h2>Mahsulotlar</h2>
+        <span
+          >Bizning ishimiz rivojlangan xizmat modeli va sifatga e'tiborga
+          asoslangan. "ORZU OSH TUZI" ni tanlab, ishlab chiqarish uzilishlarsiz
+          ishlashiga, buyurtma qilingan tuzning har doim o'z vaqtida etkazib
+          berilishiga, shuningdek bozorda eng yaxshi mahsulot qiymatiga ega
+          bo'lishingizga kafolat olasiz.</span
+        >
+      </div>
+      
+      <div class="body">
+        <div class="reklam">
+          <img src="./img/1.png" alt="1">
+          <span>Halal sertifikatiga ega bo`lgan Kristall Osh Tuzi</span>
+        </div>
+        <div class="reklam">
+          <img src="./img/2.png" alt="1">
+          <span>Eng saralangan va tozalangan tuzlar</span>
+        </div>
+        <div class="reklam">
+          <img src="./img/3.png" alt="1">
+          <span>O`zbekiston bozoridagi ko`p yillik tajriba</span>
+        </div>
+        <div class="reklam">
+          <img src="./img/4.png" alt="1">
+          <span>Katta savdo markazlari bilan hamkorliklar</span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
