--- a/index.html
+++ b/index.html
@@ -202,22 +202,22 @@
           bo'lishingizga kafolat olasiz.</span
         >
       </div>
-      
+
       <div class="body">
         <div class="reklam">
-          <img src="./img/1.png" alt="1">
+          <img src="./img/1.png" alt="1" />
           <span>Halal sertifikatiga ega bo`lgan Kristall Osh Tuzi</span>
         </div>
         <div class="reklam">
-          <img src="./img/2.png" alt="1">
+          <img src="./img/2.png" alt="1" />
           <span>Eng saralangan va tozalangan tuzlar</span>
         </div>
         <div class="reklam">
-          <img src="./img/3.png" alt="1">
+          <img src="./img/3.png" alt="1" />
           <span>O`zbekiston bozoridagi ko`p yillik tajriba</span>
         </div>
         <div class="reklam">
-          <img src="./img/4.png" alt="1">
+          <img src="./img/4.png" alt="1" />
           <span>Katta savdo markazlari bilan hamkorliklar</span>
         </div>
       </div>
