--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <ul class="right">
           <li><a href="#">Asosiy sahifa</a></li>
           <li><a href="#company">Kompaniya haqida</a></li>
-          <li><a href="#!">Mahsulotlar</a></li>
+          <li><a href="#reklama">Mahsulotlar</a></li>
           <li><a href="#!">Yangiliklar</a></li>
           <li><a href="#!">Kontakt</a></li>
         </ul>
@@ -191,7 +191,7 @@
     </div>
 
     <!-- Reklama -->
-    <div class="reklama">
+    <div class="reklama" id="reklama">
       <div class="head">
         <h2>Mahsulotlar</h2>
         <span
@@ -220,6 +220,57 @@
           <img src="./img/4.png" alt="1" />
           <span>Katta savdo markazlari bilan hamkorliklar</span>
         </div>
+      </div>
+    </div>
+
+    <!-- Products -->
+    <div class="products">
+      <div class="card">
+        <img src="https://i.imgur.com/YB2zDGq.png" alt="Orzu Tuz" />
+        <!-- Replace with your image path -->
+
+        <div class="details">
+          <h2>Bankadagi tuz 100gr, 200gr, 400gr</h2>
+          <p>
+            <span class="info-icon">ℹ️</span
+            ><strong>Tarkibi:</strong> NaCl>98.2%, Yod=(40.0+/-15.0)10⁻⁴ %,
+            Kaliy yodat-KIO3, ISO 9001:2015
+          </p>
+          <p><span class="info-icon">ℹ️</span>To‘liq ma’lumot:</p>
+
+          <div class="product-box">
+            Bankadagi tuz 100gr, 200gr, 400gr &nbsp; | &nbsp;
+            <span style="color: #e5007d">1 Kg</span>
+            <img src="https://i.imgur.com/YB2zDGq.png" alt="icon" />
+            <!-- mini image -->
+          </div>
+        </div>
+
+        <div class="button">Batafsil →</div>
+      </div>
+
+      <div class="card">
+        <img src="https://i.imgur.com/YB2zDGq.png" alt="Orzu Tuz" />
+        <!-- Replace with your image path -->
+
+        <div class="details">
+          <h2>Bankadagi tuz 100gr, 200gr, 400gr</h2>
+          <p>
+            <span class="info-icon">ℹ️</span
+            ><strong>Tarkibi:</strong> NaCl>98.2%, Yod=(40.0+/-15.0)10⁻⁴ %,
+            Kaliy yodat-KIO3, ISO 9001:2015
+          </p>
+          <p><span class="info-icon">ℹ️</span>To‘liq ma’lumot:</p>
+
+          <div class="product-box">
+            Bankadagi tuz 100gr, 200gr, 400gr &nbsp; | &nbsp;
+            <span style="color: #e5007d">1 Kg</span>
+            <img src="https://i.imgur.com/YB2zDGq.png" alt="icon" />
+            <!-- mini image -->
+          </div>
+        </div>
+
+        <div class="button">Batafsil →</div>
       </div>
     </div>
   </body>
