--- a/index.html
+++ b/index.html
@@ -225,52 +225,34 @@
 
     <!-- Products -->
     <div class="products">
-      <div class="card">
-        <img src="https://i.imgur.com/YB2zDGq.png" alt="Orzu Tuz" />
-        <!-- Replace with your image path -->
-
-        <div class="details">
-          <h2>Bankadagi tuz 100gr, 200gr, 400gr</h2>
-          <p>
-            <span class="info-icon">ℹ️</span
-            ><strong>Tarkibi:</strong> NaCl>98.2%, Yod=(40.0+/-15.0)10⁻⁴ %,
-            Kaliy yodat-KIO3, ISO 9001:2015
-          </p>
-          <p><span class="info-icon">ℹ️</span>To‘liq ma’lumot:</p>
-
-          <div class="product-box">
-            Bankadagi tuz 100gr, 200gr, 400gr &nbsp; | &nbsp;
-            <span style="color: #e5007d">1 Kg</span>
-            <img src="https://i.imgur.com/YB2zDGq.png" alt="icon" />
-            <!-- mini image -->
+      <div class="product">
+        <div class="img"></div>
+        <div class="text">
+          <h2>Kristall tuz 1kg</h2>
+          <span><img src="./img/tarkib.png" alt="tarkib"> Tarkibi:</span>
+          <article>NaCl>98,2%, Йод=(40,0+/-15,0)10-4 %, Калий йодат-KIO3, ISO 9001:2015</article>
+          <span><img src="./img/info.png" alt="info"> To'liq ma'lumot</span>
+          <div class="box">
+            <div class="triangle"></div>
+            <div class="square"></div>
           </div>
         </div>
-
-        <div class="button">Batafsil →</div>
+        <div class="button">Batafsil</div>
       </div>
 
-      <div class="card">
-        <img src="https://i.imgur.com/YB2zDGq.png" alt="Orzu Tuz" />
-        <!-- Replace with your image path -->
-
-        <div class="details">
-          <h2>Bankadagi tuz 100gr, 200gr, 400gr</h2>
-          <p>
-            <span class="info-icon">ℹ️</span
-            ><strong>Tarkibi:</strong> NaCl>98.2%, Yod=(40.0+/-15.0)10⁻⁴ %,
-            Kaliy yodat-KIO3, ISO 9001:2015
-          </p>
-          <p><span class="info-icon">ℹ️</span>To‘liq ma’lumot:</p>
-
-          <div class="product-box">
-            Bankadagi tuz 100gr, 200gr, 400gr &nbsp; | &nbsp;
-            <span style="color: #e5007d">1 Kg</span>
-            <img src="https://i.imgur.com/YB2zDGq.png" alt="icon" />
-            <!-- mini image -->
+      <div class="product">
+        <div class="img"></div>
+        <div class="text">
+          <h2>Kristall tuz 2kg</h2>
+          <span><img src="./img/tarkib.png" alt="tarkib"> Tarkibi:</span>
+          <article>NaCl>98,2%, Йод=(40,0+/-15,0)10-4 %, Калий йодат-KIO3, ISO 9001:2015</article>
+          <span><img src="./img/info.png" alt="info"> To'liq ma'lumot</span>
+          <div class="box">
+            <div class="triangle"></div>
+            <div class="square"></div>
           </div>
         </div>
-
-        <div class="button">Batafsil →</div>
+        <div class="button">Batafsil</div>
       </div>
     </div>
   </body>
