box adding to products

--- a/index.html
+++ b/index.html
@@ -229,12 +229,17 @@
         <div class="img"></div>
         <div class="text">
           <h2>Kristall tuz 1kg</h2>
-          <span><img src="./img/tarkib.png" alt="tarkib"> Tarkibi:</span>
-          <article>NaCl>98,2%, Йод=(40,0+/-15,0)10-4 %, Калий йодат-KIO3, ISO 9001:2015</article>
-          <span><img src="./img/info.png" alt="info"> To'liq ma'lumot</span>
+          <span><img src="./img/tarkib.png" alt="tarkib" /> Tarkibi:</span>
+          <article>
+            NaCl>98,2%, Йод=(40,0+/-15,0)10-4 %, Калий йодат-KIO3, ISO 9001:2015
+          </article>
+          <span><img src="./img/info.png" alt="info" /> To'liq ma'lumot</span>
           <div class="box">
-            <div class="triangle"></div>
-            <div class="square"></div>
+            <div class="text">
+              <h3>Kristall tuz 1kg</h3>
+              <a href="#">1 kg</a>
+            </div>
+            <div class="image"></div>
           </div>
         </div>
         <div class="button">Batafsil</div>
@@ -244,12 +249,17 @@
         <div class="img"></div>
         <div class="text">
           <h2>Kristall tuz 2kg</h2>
-          <span><img src="./img/tarkib.png" alt="tarkib"> Tarkibi:</span>
-          <article>NaCl>98,2%, Йод=(40,0+/-15,0)10-4 %, Калий йодат-KIO3, ISO 9001:2015</article>
-          <span><img src="./img/info.png" alt="info"> To'liq ma'lumot</span>
+          <span><img src="./img/tarkib.png" alt="tarkib" /> Tarkibi:</span>
+          <article>
+            NaCl>98,2%, Йод=(40,0+/-15,0)10-4 %, Калий йодат-KIO3, ISO 9001:2015
+          </article>
+          <span><img src="./img/info.png" alt="info" /> To'liq ma'lumot</span>
           <div class="box">
-            <div class="triangle"></div>
-            <div class="square"></div>
+            <div class="text">
+              <h3>Kristall tuz 2kg</h3>
+              <a href="#">2 kg</a>
+            </div>
+            <div class="image"></div>
           </div>
         </div>
         <div class="button">Batafsil</div>
