--- a/index.html
+++ b/index.html
@@ -265,5 +265,23 @@
         <div class="button">Batafsil</div>
       </div>
     </div>
+
+    <!-- Banner -->
+    <div class="banner">
+      <div class="img">
+        <img src="./img/bottleBack.png" alt="" />
+        <img src="./img/bottleFront.png" class="front" alt="" />
+      </div>
+      <div class="text">
+        <h2>KRISTALL OSH TUZI - ВЫСШИЙ СОРТ</h2>
+        <span
+          >Bizning ishimiz rivojlangan xizmat modeli va sifatga e'tiborga
+          asoslangan. "KRISTALL OSH TUZI" ni tanlab, ishlab chiqarish uzilishlarsiz
+          ishlashiga, buyurtma qilingan tuzning har doim o'z vaqtida etkazib
+          berilishiga</span
+        >
+      </div>
+      <div class="button">Batafsil</div>
+    </div>
   </body>
 </html>
