--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <li><a href="#">Asosiy sahifa</a></li>
           <li><a href="#company">Kompaniya haqida</a></li>
           <li><a href="#reklama">Mahsulotlar</a></li>
-          <li><a href="#!">Yangiliklar</a></li>
+          <li><a href="#yangiliklar">Yangiliklar</a></li>
           <li><a href="#!">Kontakt</a></li>
         </ul>
       </div>
@@ -282,6 +282,49 @@
         >
       </div>
       <div class="button">Batafsil</div>
+    </div>
+
+    <!-- News -->
+    <div class="yangiliklar" id="yangiliklar">
+      <h2>Yangiliklar</h2>
+
+      <div class="container">
+        <div class="box box1">
+          <div class="img">
+            <img src="./img/box1.jpg" alt="">
+          </div>
+          <span class="time"><img src="./img/kalendar.png" alt=""> 21.05.2025</span>
+          <h3>ЙОДИРОВАННАЯ СОЛЬ</h3>
+          <span class="des">Йодированная соль Йод - основной компонент гормоно...</span>
+        </div>
+
+        <div class="box">
+          <div class="img">
+            <img src="./img/box2.jpg" alt="">
+          </div>
+          <span class="time"><img src="./img/kalendar.png" alt=""> 21.05.2025</span>
+          <h3>СОЛЬ СДЕЛАЕТ ЛЮБОЕ БЛЮДО...</h3>
+          <span class="des">Соль сделает любое блюдо вкуснее!</span>
+        </div>
+
+        <div class="box">
+          <div class="img">
+            <img src="./img/box3.jpg" alt="">
+          </div>
+          <span class="time"><img src="./img/kalendar.png" alt=""> 21.05.2025</span>
+          <h3>КАКАЯ СОЛЬ ЛУЧШЕ — КРУПНАЯ...</h3>
+          <span class="des">Какая соль лучше — крупная или мелкая?</span>
+        </div>
+
+        <div class="box box4">
+          <div class="img">
+            <img src="./img/box4.jpg" alt="">
+          </div>
+          <span class="time"><img src="./img/kalendar.png" alt=""> 21.05.2025</span>
+          <h3>10 ФАКТОВ О СОЛИ</h3>
+          <span class="des">10 фактов о соли</span>
+        </div>
+      </div>
     </div>
   </body>
 </html>
