--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li><a href="#company">Kompaniya haqida</a></li>
           <li><a href="#reklama">Mahsulotlar</a></li>
           <li><a href="#yangiliklar">Yangiliklar</a></li>
-          <li><a href="#!">Kontakt</a></li>
+          <li><a href="#contact">Kontakt</a></li>
         </ul>
       </div>
     </div>
@@ -276,9 +276,9 @@
         <h2>KRISTALL OSH TUZI - ВЫСШИЙ СОРТ</h2>
         <span
           >Bizning ishimiz rivojlangan xizmat modeli va sifatga e'tiborga
-          asoslangan. "KRISTALL OSH TUZI" ni tanlab, ishlab chiqarish uzilishlarsiz
-          ishlashiga, buyurtma qilingan tuzning har doim o'z vaqtida etkazib
-          berilishiga</span
+          asoslangan. "KRISTALL OSH TUZI" ni tanlab, ishlab chiqarish
+          uzilishlarsiz ishlashiga, buyurtma qilingan tuzning har doim o'z
+          vaqtida etkazib berilishiga</span
         >
       </div>
       <div class="button">Batafsil</div>
@@ -291,38 +291,95 @@
       <div class="container">
         <div class="box box1">
           <div class="img">
-            <img src="./img/box1.jpg" alt="">
+            <img src="./img/box1.jpg" alt="" />
           </div>
-          <span class="time"><img src="./img/kalendar.png" alt=""> 21.05.2025</span>
+          <span class="time"
+            ><img src="./img/kalendar.png" alt="" /> 21.05.2025</span
+          >
           <h3>ЙОДИРОВАННАЯ СОЛЬ</h3>
-          <span class="des">Йодированная соль Йод - основной компонент гормоно...</span>
+          <span class="des"
+            >Йодированная соль Йод - основной компонент гормоно...</span
+          >
         </div>
 
         <div class="box">
           <div class="img">
-            <img src="./img/box2.jpg" alt="">
+            <img src="./img/box2.jpg" alt="" />
           </div>
-          <span class="time"><img src="./img/kalendar.png" alt=""> 21.05.2025</span>
+          <span class="time"
+            ><img src="./img/kalendar.png" alt="" /> 21.05.2025</span
+          >
           <h3>СОЛЬ СДЕЛАЕТ ЛЮБОЕ БЛЮДО...</h3>
           <span class="des">Соль сделает любое блюдо вкуснее!</span>
         </div>
 
         <div class="box">
           <div class="img">
-            <img src="./img/box3.jpg" alt="">
+            <img src="./img/box3.jpg" alt="" />
           </div>
-          <span class="time"><img src="./img/kalendar.png" alt=""> 21.05.2025</span>
+          <span class="time"
+            ><img src="./img/kalendar.png" alt="" /> 21.05.2025</span
+          >
           <h3>КАКАЯ СОЛЬ ЛУЧШЕ — КРУПНАЯ...</h3>
           <span class="des">Какая соль лучше — крупная или мелкая?</span>
         </div>
 
         <div class="box box4">
           <div class="img">
-            <img src="./img/box4.jpg" alt="">
+            <img src="./img/box4.jpg" alt="" />
           </div>
-          <span class="time"><img src="./img/kalendar.png" alt=""> 21.05.2025</span>
+          <span class="time"
+            ><img src="./img/kalendar.png" alt="" /> 21.05.2025</span
+          >
           <h3>10 ФАКТОВ О СОЛИ</h3>
           <span class="des">10 фактов о соли</span>
+        </div>
+      </div>
+    </div>
+
+    <!-- Kontakt -->
+    <div class="contact" id="contact">
+      <h2>Kontakt</h2>
+      <div class="container">
+        <div class="text">
+          <ul>
+            <li>
+              <img src="./img/manzil.png" alt="" />
+              Samarkand
+            </li>
+
+            <li>
+              <img src="./img/phone.png" alt="" />
+              +99895-067-36-55
+            </li>
+
+            <li>
+              <img src="./img/mail.png" alt="" />
+              baxacap@gmail.com
+            </li>
+          </ul>
+
+          <form>
+            <h3>Biz bilan bog'laning</h3>
+            <div class="inputs">
+              <input type="text" placeholder="Ism" />
+              <input type="tel" placeholder="Nomer" />
+            </div>
+            <a>Jo'natish</a>
+          </form>
+        </div>
+
+        <div class="map">
+          <div style="position: relative; overflow: hidden">
+            <iframe
+              src="https://yandex.uz/map-widget/v1/?ll=59.233167%2C43.328493&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgoxNDg3MTcwMzQ3EixPyrt6YmVraXN0b24sIFFvcmFxYWxwb2fKu2lzdG9uIFJlc3B1Ymxpa2FzaSIKDRTea0IVTY8uQg%2C%2C&z=7.51"
+              width="750"
+              height="500"
+              frameborder="0"
+              allowfullscreen="true"
+              style="position: relative"
+            ></iframe>
+          </div>
         </div>
       </div>
     </div>
