--- a/index.html
+++ b/index.html
@@ -383,5 +383,40 @@
         </div>
       </div>
     </div>
+
+    <!-- footer -->
+    <footer class="footer">
+      <ul class="first">
+        <li><a href="#company">Kompaniya haqida</a></li>
+        <li><a href="#reklama">Mahsulotlar</a></li>
+        <li><a href="#">Logo</a></li>
+        <li><a href="#yangiliklar">Yangiliklar</a></li>
+        <li><a href="#contact">Kontakt</a></li>
+      </ul>
+
+      <ul class="second">
+        <li><img src="./img/footer/manzil.png" alt=""> Samarkand</li>
+        <li><img src="./img/footer/tel.png" alt=""> +99895-067-36-55</li>
+        <li><img src="./img/footer/mail.png" alt=""> baxacap@gmail.com</li>
+      </ul>
+
+      <ul class="third">
+        <li>
+          <h4>Biz ijtimoiy tarmoqlardamiz</h4>
+          <ul class="third-in">
+            <a href="https://www.facebook.com/baxastarley?locale=ru_RU">
+              <img src="./img/footer/facebook.png" alt="">
+            </a>
+            <a href="https://www.instagram.com/ixtiyor_1/">
+              <img src="./img/footer/instagram.png" alt="">
+            </a>
+            <a href="https://t.me/mineralsaltcompany">
+              <img src="./img/footer/telegram.png" alt="">
+            </a>
+          </ul>
+        </li>
+        <li>&copy; 2025 TechBridge</li>
+      </ul>
+    </footer>
   </body>
 </html>
