--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
     <section id="about" class="about section">
       <div class="container">
         <h2 class="section-title">Our Heritage</h2>
-        <p class="section-subtitle">Over 100 years of salt excellence</p>
+        <p class="section-subtitle">Over 20 years of salt excellence</p>
 
         <div class="about-content">
           <div class="about-text">
             <p>
-              Founded in 1920, Kristall has been a pioneer in salt production,
+              Founded in 2005, Kristall has been a pioneer in salt production,
               combining traditional methods with modern technology to deliver
               the purest salt products.
             </p>
@@ -81,15 +81,15 @@
             </p>
             <div class="stats">
               <div class="stat-item">
-                <span class="stat-number" data-count="100">0</span>+
+                <span class="stat-number" data-count="100">20</span>+
                 <span class="stat-label">Years Experience</span>
               </div>
               <div class="stat-item">
-                <span class="stat-number" data-count="50">0</span>+
+                <span class="stat-number" data-count="50">12</span>+
                 <span class="stat-label">Countries Served</span>
               </div>
               <div class="stat-item">
-                <span class="stat-number" data-count="1000">0</span>+
+                <span class="stat-number" data-count="1000">25 mln</span>+
                 <span class="stat-label">Happy Clients</span>
               </div>
             </div>
