--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
   <head>
+    <title>Kristall - Premium Salt Products</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kristall - Premium Salt Products</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -14,6 +14,46 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap"
       rel="stylesheet"
+    />
+    <meta
+      name="description"
+      content="Kristal Tuz — 100% tabiiy, sog‘lomlik uchun foydali tuz mahsulotlari. Mahalliy va eksportga mo‘ljallangan eng sifatli tuzlar bizda."
+    />
+
+    <!-- Keywords (ixtiyoriy, lekin hali foydali) -->
+    <meta
+      name="keywords"
+      content="tuz, kristal tuz, tabiiy tuz, sog‘lom tuz, tuz ishlab chiqarish, tuz mahsulotlari"
+    />
+
+    <!-- Author -->
+    <meta name="author" content="Kristal Tuz" />
+
+    <!-- Viewport (mobil moslashuvchanlik uchun) -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Open Graph (Facebook, Telegram uchun) -->
+    <meta property="og:title" content="Kristal Tuz — 100% Toza Mahsulotlar" />
+    <meta
+      property="og:description"
+      content="Tabiiy va foydali tuz mahsulotlari. Kristal Tuz bilan sog‘lom hayotga yo‘l oling."
+    />
+    <meta
+      property="og:image"
+      content="https://kristal-tuz.uz/images/og-image.jpg"
+    />
+    <meta property="og:url" content="https://kristal-tuz.uz" />
+    <meta property="og:type" content="website" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <meta
+      name="description"
+      content="Kristal Tuz — 100% tabiiy va foydali tuz mahsulotlari. Sifatli tuzni bizdan oling."
+    />
+    <meta
+      name="keywords"
+      content="kristal tuz, tuz mahsulotlari, tabiiy tuz, sifatli tuz"
     />
   </head>
   <body>
