--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
   <head>
-    <title>Kristall - Premium Salt Products</title>
+    <title>Kristall - Premium tuz mahsulotlari</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -65,11 +65,11 @@
         </a>
         <nav class="nav">
           <ul class="nav-list">
-            <li><a href="#home" class="nav-link active">Home</a></li>
-            <li><a href="#about" class="nav-link">About</a></li>
-            <li><a href="#products" class="nav-link">Products</a></li>
-            <li><a href="#news" class="nav-link">News</a></li>
-            <li><a href="#contact" class="nav-link">Contact</a></li>
+            <li><a href="#home" class="nav-link active">Asosiy</a></li>
+            <li><a href="#about" class="nav-link">Biz Haqimizda</a></li>
+            <li><a href="#products" class="nav-link">Mahsulotlar</a></li>
+            <li><a href="#news" class="nav-link">Yangiliklar</a></li>
+            <li><a href="#contact" class="nav-link">Kontakt</a></li>
           </ul>
           <div class="theme-toggle">
             <input type="checkbox" id="theme-switch" class="theme-switch" />
@@ -91,11 +91,12 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
       <div class="hero-content">
-        <h1 class="hero-title">Pure Salt. Pure Life.</h1>
+        <h1 class="hero-title">Toza Tuz. Toza Hayot</h1>
         <p class="hero-subtitle">
-          Discover the natural goodness of Kristall premium salt products
+          Kristall premium tuz mahsulotlarining tabiiy yaxshiliklarini kashf
+          eting
         </p>
-        <a href="#products" class="btn btn-primary">Explore Products</a>
+        <a href="#products" class="btn btn-primary">Mahsulotlarimiz</a>
       </div>
       <div class="salt-particle" id="salt-particle-1"></div>
       <div class="salt-particle" id="salt-particle-2"></div>
@@ -105,32 +106,36 @@
     <!-- About Section -->
     <section id="about" class="about section">
       <div class="container">
-        <h2 class="section-title">Our Heritage</h2>
-        <p class="section-subtitle">Over 20 years of salt excellence</p>
+        <h2 class="section-title">Merosimiz</h2>
+        <p class="section-subtitle">
+          20 yildan ortiq tuz sohasidagi mukammallik
+        </p>
 
         <div class="about-content">
           <div class="about-text">
             <p>
-              Founded in 2005, Kristall has been a pioneer in salt production,
-              combining traditional methods with modern technology to deliver
-              the purest salt products.
+              2001-yilda tashkil topgan Kristall kompaniyasi an’anaviy usullarni
+              zamonaviy texnologiyalar bilan uyg‘unlashtirib, eng sof tuz
+              mahsulotlarini yetkazib berishda ilg‘orlardan biri bo‘lib
+              kelmoqda.
             </p>
             <p>
-              Our salt is sourced from pristine locations and processed with
-              care to preserve its natural minerals and trace elements.
+              Tuzimiz beg‘ubor hududlardan olinadi va tabiiy minerallar hamda iz
+              elementlarini saqlab qolish uchun ehtiyotkorlik bilan qayta
+              ishlanadi.
             </p>
             <div class="stats">
               <div class="stat-item">
                 <span class="stat-number" data-count="100">20</span>+
-                <span class="stat-label">Years Experience</span>
+                <span class="stat-label">Yillik tajriba</span>
               </div>
               <div class="stat-item">
-                <span class="stat-number" data-count="50">12</span>+
-                <span class="stat-label">Countries Served</span>
+                <span class="stat-number" data-count="50">13</span>+
+                <span class="stat-label">Xizmat qilinayotgan mamlakatlar</span>
               </div>
               <div class="stat-item">
-                <span class="stat-number" data-count="1000">25 mln</span>+
-                <span class="stat-label">Happy Clients</span>
+                <span class="stat-number" data-count="1000">1000</span>+
+                <span class="stat-label">Xursand mijozlar</span>
               </div>
             </div>
           </div>
@@ -140,19 +145,21 @@
                 <div class="slider-slide active">
                   <img src="images/factory-1.jpg" alt="Kristall Factory" />
                   <div class="slider-caption">
-                    Our state-of-the-art production facility
+                    Zamonaviy texnologiyalar bilan jihozlangan ishlab chiqarish
+                    korxonamiz
                   </div>
                 </div>
                 <div class="slider-slide">
                   <img src="images/factory-2.jpg" alt="Salt Harvesting" />
                   <div class="slider-caption">
-                    Sustainable salt harvesting process
+                    Atrof-muhitga zarar yetkazmaydigan tuz ishlab chiqarish
+                    jarayoni
                   </div>
                 </div>
                 <div class="slider-slide">
                   <img src="images/factory-3.jpg" alt="Quality Control" />
                   <div class="slider-caption">
-                    Rigorous quality control standards
+                    Qat'iy sifat nazorati standartlari
                   </div>
                 </div>
               </div>
@@ -178,8 +185,8 @@
     <!-- Products Section -->
     <section id="products" class="products section">
       <div class="container">
-        <h2 class="section-title">Our Products</h2>
-        <p class="section-subtitle">Premium quality for every need</p>
+        <h2 class="section-title">Mahsulotlarimiz</h2>
+        <p class="section-subtitle">Har qanday ehtiyoj uchun yuqori sifat</p>
 
         <div class="products-grid">
           <div class="product-card">
@@ -229,18 +236,16 @@
             </div>
           </div>
         </div>
-
-        <div class="text-center">
-          <a href="#" class="btn btn-secondary">View All Products</a>
-        </div>
       </div>
     </section>
 
     <!-- News Section -->
     <section id="news" class="news section">
       <div class="container">
-        <h2 class="section-title">Latest News</h2>
-        <p class="section-subtitle">Stay updated with Kristall</p>
+        <h2 class="section-title">So'nggi yangiliklar</h2>
+        <p class="section-subtitle">
+          Kristall yangiliklaridan xabardor bo‘ling
+        </p>
 
         <div class="news-grid">
           <article class="news-card">
@@ -248,19 +253,20 @@
               <img src="images/salt-1.jpg" alt="News 1" />
               <div class="news-date">
                 <span class="date-day">15</span>
-                <span class="date-month">Jun</span>
+                <span class="date-month">Iyun</span>
               </div>
             </div>
             <div class="news-content">
               <h3 class="news-title">
-                Kristall Wins Sustainable Production Award
+                Kristall barqaror ishlab chiqarish bo‘yicha mukofotni qo‘lga
+                kiritdi
               </h3>
               <p class="news-excerpt">
-                Our company has been recognized for implementing eco-friendly
-                production methods...
+                Kompaniyamiz atrof-muhitga do‘stona ishlab chiqarish usullarini
+                joriy etgani uchun e’tirof etildi.
               </p>
               <a href="#" class="news-link"
-                >Read More <i class="fas fa-arrow-right"></i
+                >Ko'proq <i class="fas fa-arrow-right"></i
               ></a>
             </div>
           </article>
@@ -274,13 +280,13 @@
               </div>
             </div>
             <div class="news-content">
-              <h3 class="news-title">New Product Line Launch</h3>
+              <h3 class="news-title">Yangi mahsulot turkumining taqdimoti</h3>
               <p class="news-excerpt">
-                Introducing our new infused salt varieties with organic herbs
-                and spices...
+                Organik o‘simliklar va ziravorlar bilan boyitilgan yangi tuz
+                turlarimizni taqdim etamiz...
               </p>
               <a href="#" class="news-link"
-                >Read More <i class="fas fa-arrow-right"></i
+                >Ko'proq <i class="fas fa-arrow-right"></i
               ></a>
             </div>
           </article>
@@ -294,13 +300,15 @@
               </div>
             </div>
             <div class="news-content">
-              <h3 class="news-title">Partnership with Michelin Chefs</h3>
+              <h3 class="news-title">
+                Amerikaning yulduzli oshpazlari bilan hamkorlik
+              </h3>
               <p class="news-excerpt">
-                Kristall partners with world-renowned chefs to develop premium
-                culinary salts...
+                Kristall dunyoga mashhur oshpazlar bilan birgalikda yuqori
+                sifatli osh tuzlarini ishlab chiqmoqda...
               </p>
               <a href="#" class="news-link"
-                >Read More <i class="fas fa-arrow-right"></i
+                >Ko'proq <i class="fas fa-arrow-right"></i
               ></a>
             </div>
           </article>
@@ -311,8 +319,8 @@
     <!-- Contact Section -->
     <section id="contact" class="contact section">
       <div class="container">
-        <h2 class="section-title">Get In Touch</h2>
-        <p class="section-subtitle">We'd love to hear from you</p>
+        <h2 class="section-title">Biz bilan bog‘laning</h2>
+        <p class="section-subtitle">Sizning fikringiz biz uchun muhim</p>
 
         <div class="contact-content">
           <div class="contact-info">
@@ -322,7 +330,7 @@
               </div>
               <div class="info-text">
                 <h4>Address</h4>
-                <p>123 Salt Avenue, Mineral City, MC 12345</p>
+                <p>Samarkand, Uzbekistan</p>
               </div>
             </div>
 
@@ -331,8 +339,8 @@
                 <i class="fas fa-phone-alt"></i>
               </div>
               <div class="info-text">
-                <h4>Phone</h4>
-                <p>+1 (555) 123-4567</p>
+                <h4>Telefon nomer</h4>
+                <p>+998 (95)-067-36-55</p>
               </div>
             </div>
 
@@ -342,7 +350,7 @@
               </div>
               <div class="info-text">
                 <h4>Email</h4>
-                <p>info@kristallsalt.com</p>
+                <p>baxacap@gmail.com</p>
               </div>
             </div>
 
@@ -365,18 +373,15 @@
 
           <form class="contact-form">
             <div class="form-group">
-              <input type="text" placeholder="Your Name" required />
+              <input type="text" placeholder="Ismingiz" required />
             </div>
             <div class="form-group">
-              <input type="email" placeholder="Your Email" required />
+              <input type="email" placeholder="Elektron pochta" required />
             </div>
             <div class="form-group">
-              <input type="text" placeholder="Subject" />
+              <textarea placeholder="Arizangiz" rows="5" required></textarea>
             </div>
-            <div class="form-group">
-              <textarea placeholder="Your Message" rows="5" required></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Send Message</button>
+            <button type="submit" class="btn btn-primary">Jo'nating</button>
           </form>
         </div>
       </div>
@@ -393,8 +398,8 @@
               class="footer-logo"
             />
             <p>
-              Providing premium salt products since 1920. Pure, natural, and
-              sustainably sourced.
+              2001-yildan beri premium tuz mahsulotlarini taqdim etamiz. Toza,
+              tabiiy va barqaror manbalardan olingan.
             </p>
             <div class="footer-social">
               <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -405,18 +410,18 @@
           </div>
 
           <div class="footer-col">
-            <h4 class="footer-title">Quick Links</h4>
+            <h4 class="footer-title">Tezkor havola</h4>
             <ul class="footer-links">
-              <li><a href="#home">Home</a></li>
-              <li><a href="#about">About Us</a></li>
-              <li><a href="#products">Products</a></li>
-              <li><a href="#news">News</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="#home">Asosiy</a></li>
+              <li><a href="#about">Biz haqimizda</a></li>
+              <li><a href="#products">Mahsulotlarimiz</a></li>
+              <li><a href="#news">Yangiliklar</a></li>
+              <li><a href="#contact">Kontakt</a></li>
             </ul>
           </div>
 
           <div class="footer-col">
-            <h4 class="footer-title">Products</h4>
+            <h4 class="footer-title">Mahsulotlarimiz</h4>
             <ul class="footer-links">
               <li><a href="#">Himalayan Pink Salt</a></li>
               <li><a href="#">Sea Salt</a></li>
@@ -427,23 +432,24 @@
           </div>
 
           <div class="footer-col">
-            <h4 class="footer-title">Newsletter</h4>
+            <h4 class="footer-title">"So‘nggi yangiliklar</h4>
             <p>
-              Subscribe to our newsletter for the latest updates and offers.
+              So‘nggi yangiliklar va takliflardan xabardor bo‘lish uchun axborot
+              xabarnomamizga obuna bo‘ling.
             </p>
             <form class="newsletter-form">
-              <input type="email" placeholder="Your Email" required />
+              <input type="email" placeholder="Emailingiz" required />
               <button type="submit"><i class="fas fa-paper-plane"></i></button>
             </form>
           </div>
         </div>
 
         <div class="footer-bottom">
-          <p>&copy; 2023 Kristall Salt Company. All Rights Reserved.</p>
+          <p>&copy; 2025 Kristall Tuz Zavodi. Barcha huquqlar himoyalangan.</p>
           <div class="footer-legal">
-            <a href="#">Privacy Policy</a>
-            <a href="#">Terms of Service</a>
-            <a href="#">Cookies Policy</a>
+            <a href="#">Maxfiylik siyosati </a>
+            <a href="#">Xizmat ko‘rsatish shartlari</a>
+            <a href="#">Cookie fayllar siyosati</a>
           </div>
         </div>
       </div>
