--- a/index.html
+++ b/index.html
@@ -445,11 +445,10 @@
         </div>
 
         <div class="footer-bottom">
-          <p>&copy; 2025 Kristall Tuz Zavodi. Barcha huquqlar himoyalangan.</p>
+          <p>&copy; 2025 Diyor Khasanov. Barcha huquqlar himoyalangan.</p>
           <div class="footer-legal">
             <a href="#">Maxfiylik siyosati </a>
             <a href="#">Xizmat ko‘rsatish shartlari</a>
-            <a href="#">Cookie fayllar siyosati</a>
           </div>
         </div>
       </div>
