--- a/index.html
+++ b/index.html
@@ -373,13 +373,13 @@
                   ><i class="fab fa-facebook-f"></i
                 ></a>
                 <a href="#" class="social-link"
-                  ><i class="fab fa-twitter"></i
+                  ><i class="fa-brands fa-telegram"></i
                 ></a>
                 <a href="#" class="social-link"
                   ><i class="fab fa-instagram"></i
                 ></a>
                 <a href="#" class="social-link"
-                  ><i class="fab fa-linkedin-in"></i
+                  ><i class="fa-brands fa-weixin"></i
                 ></a>
               </div>
             </div>
