--- a/index.html
+++ b/index.html
@@ -302,16 +302,13 @@
                   ><i class="fab fa-facebook-f"></i
                 ></a>
                 <a href="#" class="social-link"
-                  ><i class="fab fa-twitter"></i
+                  ><i class="fa-brands fa-telegram"></i
                 ></a>
                 <a href="#" class="social-link"
                   ><i class="fab fa-instagram"></i
                 ></a>
                 <a href="#" class="social-link"
-                  ><i class="fab fa-linkedin-in"></i
-                ></a>
-                <a href="#" class="social-link"
-                  ><i class="fab fa-youtube"></i
+                  ><i class="fa-brands fa-weixin"></i
                 ></a>
               </div>
             </div>
@@ -328,10 +325,10 @@
                 </div>
                 <div class="form-group">
                   <input
-                    type="email"
-                    id="email"
-                    name="email"
-                    placeholder="Elektron pochta manzilingiz"
+                    type="tel"
+                    id="tel"
+                    name="tel"
+                    placeholder="Telefon raqamingiz"
                     required
                   />
                 </div>
@@ -347,6 +344,10 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Yuborish</button>
               </form>
+              <div
+                id="formResult"
+                style="margin-top: 15px; display: none"
+              ></div>
             </div>
           </div>
         </div>
@@ -419,6 +420,7 @@
 
     <script src="js/main.js"></script>
     <script src="js/slider.js"></script>
+    <script src="js/bot.js"></script>
     <script src="js/theme-toggle.js"></script>
   </body>
 </html>
