--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kristall - Premium Tuz Mahsulotlari</title>
+    <title>KRISTALL-TUZ - Premium Tuz Mahsulotlari</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="icon" href="logo.png" type="image/png" />
+    <link rel="icon" href="./images/logo.png" type="image/png" />
   </head>
   <body>
     <!-- Header -->
@@ -22,7 +22,7 @@
         <nav class="navbar">
           <a href="#" class="logo">
             <img src="./images/logo.png" alt="" />
-            <span>Kristall</span>
+            <span>KRISTALL-TUZ</span>
           </a>
           <ul class="nav-menu">
             <li class="nav-item">
@@ -78,22 +78,24 @@
       <section id="about" class="about-section">
         <div class="container">
           <div class="section-header">
-            <h2>Bizning Tariximiz</h2>
-            <p>21 yillik tuz tajribasi</p>
+            <h2>Biz Haqimizda</h2>
+            <p>21 yillik tuz ishlab chiqarish tajribasi</p>
           </div>
           <div class="about-content">
             <div class="about-text">
-              <h3>Kristall tuzining merosi</h3>
+              <h3>"KRISTALL-TUZ" MCHJ haqida</h3>
               <p>
-                2004 yilda asos solingan Kristall tuz ishlab chiqarishda
-                kashshof bo'lgan, yetkazib berish uchun zamonaviy texnologiyalar
-                bilan an'anaviy usullarni birlashtirish eng toza tuz
-                mahsulotlari.
+                "KRISTALL-TUZ" Ma'suliyati Cheklangan Jamiyat ish faoliyatiga
+                2004-yilda asos solingan. 
               </p>
               <p>
-                Bizning tuzimiz tegmagan qadimgi er osti konlaridan keladi
-                zamonaviy ifloslanish, eng yuqori sifatli va tabiiylikni
-                ta'minlash mineral tarkibi.
+                2004-yilda tashkil etilgan "KRISTALL-TUZ"
+                MChJ O‘zbekiston va qo‘shni mamlakatlar bozorida sifatli
+                tuz mahsulotlari ishlab chiqarish va yetkazib berish sohasida 20
+                yildan ortiq tajribaga ega. Kompaniyamiz o‘z faoliyatini
+                zamonaviy Janubiy Korea davlatida ishlab chiqarilgan texnologiyalar asosida olib borib, oziq-ovqat, sanoat
+                va maishiy sohalar uchun oliy navli tuz
+                mahsulotlarini taqdim etib kelmoqda.
               </p>
               <div class="stats">
                 <div class="stat-item">
@@ -361,7 +363,7 @@
           <div class="footer-col">
             <div class="footer-logo">
               <img src="images/logo.png" alt="Kristall Logo" />
-              <span>Kristall</span>
+              <span>KRISTALL-TUZ</span>
             </div>
             <p>
               2004 yildan beri yuqori sifatli tuz mahsulotlari bilan ta'minlash.
