--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   <span class="stat-label">Yillik Tajriba</span>
                 </div>
                 <div class="stat-item">
-                  <span class="stat-number" data-count="20">0</span>+
+                  <span class="stat-number" data-count="7">0</span>+
                   <span class="stat-label">Tashqi eksport davlatlari</span>
                 </div>
                 <div class="stat-item">
@@ -287,7 +287,8 @@
                 </div>
                 <div class="info-text">
                   <h4>Telefon raqam</h4>
-                  <p>+998 (95) 067 36 55</p>
+                  <p>+998 (95) 341 77 77</p>
+                  <p>+998 (97) 911 01 11</p>
                 </div>
               </div>
               <div class="info-item">
@@ -296,7 +297,7 @@
                 </div>
                 <div class="info-text">
                   <h4>Elektron pochta</h4>
-                  <p>baxacap@gmail.com</p>
+                  <p>kristall.tuz@bk.ru </p>
                 </div>
               </div>
               <div class="social-links">
