--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
               >
             </li>
             <li class="nav-item">
+              <a href="#faq" class="nav-link" data-i18n="nav_faq"
+                >FAQ</a
+              >
+            </li>
+            <li class="nav-item">
               <a href="#contact" class="nav-link" data-i18n="nav_contact"
                 >Kontakt</a
               >
